--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -13,3 +13,4 @@ log = "0.4.20"
 tokio-postgres = "0.7.10"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
+actix-cors = "0.7.0"
