--- a/server/server/Cargo.toml
+++ b/server/server/Cargo.toml
@@ -8,9 +8,22 @@ edition = "2021"
 [dependencies]
 actix-web = "4.5.1"
 env_logger = "0.11.2"
-jsonwebtoken = "9.2.0"
 log = "0.4.20"
 tokio-postgres = "0.7.10"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 actix-cors = "0.7.0"
+r2d2_sqlite = "0.24.0"
+r2d2 = "0.8.10"
+
+[dependencies.uuid]
+version = "1.7.0"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
+
+[dependencies.rusqlite]
+version = "0.31.0"
+features = ["bundled"]
