--- a/crossfarmer_server/Cargo.toml
+++ b/crossfarmer_server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "server"
+name = "crossfarmer_server"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,7 +9,6 @@ edition = "2021"
 actix-web = "4.5.1"
 env_logger = "0.11.2"
 log = "0.4.20"
-tokio-postgres = "0.7.10"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
 actix-cors = "0.7.0"
