--- a/crossfarmer_server/Cargo.toml
+++ b/crossfarmer_server/Cargo.toml
@@ -7,13 +7,19 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.5.1"
-env_logger = "0.11.2"
+actix-cors = "0.7.0"
+
 log = "0.4.20"
+env_logger = "0.11.2"
+
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
-actix-cors = "0.7.0"
+
 r2d2_sqlite = "0.24.0"
 r2d2 = "0.8.10"
+
+tokio = "1.37.0"
+rand = "0.8.5"
 
 [dependencies.uuid]
 version = "1.7.0"
