--- a/crossfarmer_server/Cargo.toml
+++ b/crossfarmer_server/Cargo.toml
@@ -18,7 +18,6 @@ serde_json = "1.0.113"
 r2d2_sqlite = "0.24.0"
 r2d2 = "0.8.10"
 
-tokio = "1.37.0"
 rand = "0.8.5"
 
 [dependencies.uuid]
@@ -32,3 +31,8 @@ features = [
 [dependencies.rusqlite]
 version = "0.31.0"
 features = ["bundled"]
+
+
+[dependencies.tokio]
+version = "1.37.0"
+features = ["full"]
